# SoccerBotCpp

./: .gitignore  CMakeLists.txt  README.md  evaluate.py  labels.txt  run_cmake.sh
src/: Model.cpp  Model.h  minimal.cpp
